--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,1 @@
-#start{
-    background-image: url("Documents/");
-}
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Poiret+One|Raleway|Ubuntu+Mono&display=swap');
