--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,20 @@ html {
     margin: 0;
     padding: 0;
    }
+   #topbar{
+       size: contain;
+   }
    
    .overlay {
     background-color: rgba(0, 0, 0, 0.6);
     height: 668px;
+    color: white;
    }
    
    .overlay > img, .h-text {
     position: relative;
     top: 33%;
+    align-content: center;
    }
    .h-text{
     font-family: 'Comfortaa', cursive;
@@ -69,8 +74,9 @@ html {
    }
    
    .services {
-    background-image: url("../images/backgrounds/s_image.jpg");
+    background-image: url("../images/s_image.jpg");
     height: 280px;
+    color: whitesmoke;
    }
    
    .services h1 {
@@ -98,7 +104,7 @@ html {
    }
    
    .contacts {
-    background-image: url("../images/backgrounds/c_image.jpg");
+    background-image: url("../images/c_image.jpg");
     background-size: cover;
    }
    
